# nlp-asa-prediction

./: .flake8  .gitignore  LICENSE  MLproject  README.md  pyproject.toml
environment/: pyenv_poetry_setup.sh
misc/: azure-file-upload.md  clear_datasets_cache.py  delete_models.py  make_datasets_cache.py
models/baseline/: age_classifier.py  age_meds_classifier.py  debug_classifier.py  random_classifier.py  train_evaluate.py
models/bert/: test.py  train.py  train_evaluate.py  trainer.py  tune.py  tune_bioclinicalbert.py  tune_dischargesummarybert.py
models/conf/: baseline_config.yaml  bioclinicalbert_config.yaml  bioclinicalbert_shap_config.yaml  bioclinicalbert_tune_config.yaml  dischargesummarybert_config.yaml  dischargesummarybert_tune_config.yaml  fasttext_config.yaml  fasttext_shap_config.yaml  fasttext_tune_config.yaml  rf_config.yaml  rf_tune_config.yaml  svm_config.yaml  svm_tune_config.yaml
models/conf/datamodule/: bioclinicalbert.yaml  dischargesummarybert.yaml
models/conf/evaluate/: base.yaml
models/conf/general/: base.yaml  evaluate.yaml  evaluate_export_dataset.yaml  train.yaml  train_export_dataset.yaml  tune.yaml  tune_export_dataset.yaml
models/conf/lightning/: base.yaml  debug.yaml  tune.yaml
models/conf/metrics/: all.yaml  default.yaml  default_bootstrap_se.yaml  tune.yaml
models/conf/mlflow/: base.yaml  baseline.yaml  debug.yaml  tune.yaml
models/conf/model/: baseline.yaml  bioclinicalbert.yaml  bioclinicalbert_tune.yaml  dischargesummarybert.yaml  dischargesummarybert_tune.yaml  fasttext.yaml  fasttext_tune.yaml  rf.yaml  rf_debug.yaml  rf_tune.yaml  rf_tune_debug.yaml  svm.yaml  svm_debug.yaml  svm_tune.yaml  svm_tune_debug.yaml
models/conf/objective/: mcc.yaml
models/conf/task/: diagnosis-asa.yaml  hpi-asa.yaml  meds-asa.yaml  note-asa.yaml  note512-asa.yaml  pmsh-asa.yaml  procedure-asa.yaml  ros-asa.yaml
models/conf/tune/: bert.yaml  cpu_base.yaml  cpu_debug.yaml  cpu_trials5.yaml  fasttext.yaml  gpu_base.yaml  gpu_debug.yaml  gpu_half_gpu.yaml  rf.yaml  svm.yaml
models/fasttext/: test.py  train.py  train_evaluate.py  tune.py
models/interpret/: baseline_run_ids.yaml  best_model_versions.yaml  evaluation_run_ids.yaml  mlflow_runs.py  shap_clinicalbert.py  shap_clinicalbert_model.py  shap_fasttext.py  shap_fasttext_model.py
models/rf/: test.py  train.py  train_evaluate.py  tune.py
models/svm/: test.py  train.py  train_evaluate.py  tune.py
models/utils/: __init__.py  config.py  utils.py
notebooks/: 1_evaluate_all_models.py  2_compute_all_metrics.py  3_tables_figures.py  4_contingency_table_figure.py  5_roc_pr_figures.py  baseline_characteristics.py  catastrophic_examples_raters_figure.py  catastrophic_examples_selection.py  consort_flow.py  contingency_table_figure.py  evaluate_all_models.py  results_dataclasses.py  results_tables.py  roc_pr_figures.py  shap_error_analysis_figure.py  shap_explanations.py
src/dataset/: cases.py  data.py  enums.py  make_dataset.py  notes.py  preanesthesia_note.py
src/dataset/utils/: __init__.py  parallel_process.py  text_utils.py  time_range.py  utils.py
src/metrics/: __init__.py  mlflow.py  utils.py  whitelist.py
src/metrics/format/: __init__.py  confusion_matrix.py  format.py  pr.py  roc.py
src/metrics/functional/: __init__.py  bootstrap_std_error.py  loss.py  metrics.py  top_examples.py
src/metrics/metrics/: __init__.py  auc_mu.py
src/modeling/bert/: __init__.py  bert_asa_huggingface.py  bert_custom_loss_huggingface.py  bert_lightning_module.py
src/modeling/datamodule/: __init__.py  datamodule.py  dataset_utils.py  preprocess.py
src/modeling/fasttext/: __init__.py  evaluate.py
src/modeling/lightning_callbacks/: __init__.py  counter.py  functional_metrics.py  loss_monitor.py  tune_report.py
src/modeling/mlflow/: __init__.py  fasttext_flavor.py  log_fasttext_model.py  log_mlflow_model.py  log_sklearn_model.py  utils.py
src/modeling/ray/: __init__.py  azure_mlflow_tune_mixin.py
src/modeling/sklearn/: __init__.py  cross_validate.py  train_calibrate.py  train_evaluate.py
src/utils/: __init__.py  cpu.py  list_utils.py  notebook_utils.py  notify.py
(+4 files in other folders)
